  "What objects are accessible from X that aren't accessible from Y?"
  (John Arbash Meinel)

* ``ObjectManager.summarize()`` can now take an object and an exclusion
  list, and summarize the referenced objects. This can be quite useful
  when you want to look at just a subset of the graph. The syntax is
  ``ObjectManager.summarize(obj, [not_address1, not_address2])``.
  (John Arbash Meinel)


Meliae 0.2.1
############

:0.2.1: 2010-07-20

* When dumping a ``PyFrame`` look at the function object for
  ``co_name``, so you don't have to wander through the references to
  get their yourself. (Andrew Bennetts)

* Fixes for the simple regex parser (w/o simplejson). However,
  simplejson is still recommended, because it is both faster and more
  accurate (decodes unicode escapes, etc). (John Arbash Meinel)

* ``loader.load()`` now defaults to computing parents and collapsing
  instance dicts. It does mean that loading will be a bit slower, and
  consume more memory, but it is almost always what you need to do
  first anyway. (John Arbash Meinel)


Meliae 0.2.1rc1
###############

:0.2.1rc1: 2010-06-30

* Avoid calling ``PyType_Type.tp_traverse`` when the argument is not a
  heap-class. There is an assert that gets tripped if you are running a
  debug build (or something to do with how Fedora builds its python).
  (John Arbash Meinel, #586122)

* Flush the file handle before exiting. We were doing it at the Python
  layer, but that might not translate into the ``FILE*`` object.
  (John Arbash Meinel, #428165)

* Handle some issues when using Pyrex 0.9.8.4. It was treating
  ``<unsigned long>`` as casting the object pointer, not as a Python
  level "extract an integer". However, assignment to an ``cdef unsigned
  long`` does the right thing. (John Arbash Meinel)

* Tweak some memory performance issues (Gary Poster, #581918)


Meliae 0.2.0
############

:0.2.0: 2010-01-08

A fairly major reworking of the internals, provides significant memory